# GeminiWatermarkTool

./: CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
resources/lang/: en.json  zh-CN.json
src/: main.cpp
src/cli/: cli_app.cpp
src/core/: watermark_engine.cpp
src/gui/: gui_app.cpp
src/gui/app/: app_controller.cpp  app_controller.hpp  app_state.hpp
src/gui/resources/: style.hpp
src/gui/widgets/: image_preview.cpp  image_preview.hpp  main_window.cpp  main_window.hpp
src/i18n/: i18n.cpp  i18n.hpp  keys.hpp
src/utils/: path_formatter.hpp
tests/i18n/: i18n_test.cpp
